Add @prisma/adapter-pg dependency and update socket provider for improved connection handling

--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@auth/core": "latest",
     "@hookform/resolvers": "^3.9.1",
     "@next-auth/prisma-adapter": "latest",
+    "@prisma/adapter-pg": "^6.9.0",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "1.2.2",
     "@radix-ui/react-alert-dialog": "1.1.4",
