Add @auth/prisma-adapter dependency and update employee management API routes
- Introduced @auth/prisma-adapter to package.json for enhanced authentication support.
- Refactored employee management API routes to improve data retrieval and validation.
- Updated GET and POST methods to handle employee data more effectively, including better error handling and session management.
- Enhanced the bus fleet management component with a new form structure using React Hook Form and Zod for validation.
- Improved UI consistency and responsiveness in the employee management interface.

--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@auth/core": "latest",
+    "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^3.9.1",
     "@next-auth/prisma-adapter": "latest",
     "@prisma/adapter-pg": "^6.9.0",
