Add bcrypt and @types/bcrypt dependencies for enhanced security
- Introduced bcrypt for password hashing in package.json to improve security measures.
- Added @types/bcrypt for TypeScript support in development.
- Updated pnpm-lock.yaml to reflect the new dependencies and their versions.
- Enhanced company approval API to include company existence check, notification creation, and activity logging for better tracking and user feedback.

--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "@types/react-dropzone": "^5.1.0",
     "@uploadthing/react": "^7.3.1",
     "autoprefixer": "^10.4.20",
+    "bcrypt": "^6.0.0",
     "bcryptjs": "latest",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -77,6 +78,7 @@
     "zod": "^3.24.1"
   },
   "devDependencies": {
+    "@types/bcrypt": "^5.0.2",
     "@types/node": "^22",
     "@types/react": "^19",
     "@types/react-dom": "^19",
