--- a/package.json
+++ b/package.json
@@ -42,6 +42,7 @@
     "@radix-ui/react-toggle": "1.1.1",
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
+    "@types/jsonwebtoken": "^9.0.9",
     "@types/react-dropzone": "^5.1.0",
     "@uploadthing/react": "^7.3.1",
     "autoprefixer": "^10.4.20",
@@ -54,6 +55,7 @@
     "embla-carousel-react": "8.5.1",
     "http": "latest",
     "input-otp": "1.4.1",
+    "jsonwebtoken": "^9.0.2",
     "lucide-react": "^0.454.0",
     "nanoid": "latest",
     "next": "15.2.4",
