--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "@auth/prisma-adapter": "^2.9.1",
     "@hookform/resolvers": "^3.9.1",
     "@next-auth/prisma-adapter": "latest",
+    "@nextui-org/react": "^2.6.11",
     "@prisma/adapter-pg": "^6.9.0",
     "@prisma/client": "latest",
     "@radix-ui/react-accordion": "1.2.2",
@@ -53,6 +54,7 @@
     "cmdk": "1.0.4",
     "date-fns": "latest",
     "embla-carousel-react": "8.5.1",
+    "framer-motion": "^12.16.0",
     "http": "latest",
     "input-otp": "1.4.1",
     "jsonwebtoken": "^9.0.2",
