--- a/package.json
+++ b/package.json
@@ -64,6 +64,7 @@
     "next-auth": "latest",
     "next-themes": "^0.4.4",
     "nodemailer": "latest",
+    "pnpm": "^10.12.1",
     "prisma": "latest",
     "react": "^19",
     "react-day-picker": "8.10.1",
