Add QR code generation and ticket management enhancements
- Introduced `qrcode.react` dependency for QR code generation in ticketing.
- Updated ticket sale API to handle multiple tickets and return QR code data for the first ticket.
- Enhanced validation in the ticket sale process, including checks for available seats and required fields.
- Improved error handling and logging for better debugging and user feedback.
- Refactored trip management API to include additional trip statuses and improved data retrieval for cashiers.
- Updated UI components for cashier dashboard to support new ticketing features and display relevant statistics.

--- a/package.json
+++ b/package.json
@@ -66,6 +66,7 @@
     "nodemailer": "latest",
     "pnpm": "^10.12.1",
     "prisma": "latest",
+    "qrcode.react": "^4.2.0",
     "react": "^19",
     "react-confetti": "^6.4.0",
     "react-day-picker": "8.10.1",
