Add support for departure and arrival countries in trip data
- Updated the trip retrieval API to include departure and arrival country information.
- Enhanced the SearchPage component to handle new filters for departure and arrival countries.
- Refactored the TripCard component to display additional trip details, including country information.
- Modified the SearchFilters type to accommodate new data types for price and date.
- Improved overall data handling and validation in the trip management process.

--- a/package.json
+++ b/package.json
@@ -44,6 +44,7 @@
     "@radix-ui/react-toggle-group": "1.1.1",
     "@radix-ui/react-tooltip": "1.1.6",
     "@types/jsonwebtoken": "^9.0.9",
+    "@types/qrcode": "^1.5.5",
     "@types/react-dropzone": "^5.1.0",
     "@uploadthing/react": "^7.3.1",
     "autoprefixer": "^10.4.20",
@@ -66,6 +67,7 @@
     "nodemailer": "latest",
     "pnpm": "^10.12.1",
     "prisma": "latest",
+    "qrcode": "^1.5.4",
     "qrcode.react": "^4.2.0",
     "react": "^19",
     "react-confetti": "^6.4.0",
